--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,32 @@
 /*  your css code here. If applicable */
+table{
+	border: 1px solid black;
+	width: 500px;
+	height: 100px;	
+	border-spacing: 1px;
+	padding: 1px;
+}
+td{
+	border: 1px solid black;
+	border-collapse: collapse;
+}
+#t12{
+	text-align: center
+}
+#t13{
+	text-align: right;
+}
+#firstrow{
+	background-color: green;
+	height: 20px;
+}
+#lastrow{
+	background-color: blue;
+	height: 20px;
+}
+#t-image, img{
+	width: 200px;
+	height: 150px;
+	text-align: center;
+	border: 1px solid black
+}
